--- a/models.html
+++ b/models.html
@@ -54,7 +54,8 @@ app.Event = Backbone.Model.extend({
     paidStatus: false,
     finished: false,
     notes: null,
-    presenter: null
+    presenter: null,
+    status: null
   },
   createCalendarEvent: function(date, startTime, endTime, opts) {
 
