--- a/styles.html
+++ b/styles.html
@@ -114,6 +114,18 @@ body {
   background-color: #ffffff;
 }
 
+.event-item {
+  width: 100%;
+  padding: 10px;
+  box-shadow: 0 0 2px 0 rgba(0,0,0,0.2);
+  transition: .2s all ease-in-out;
+}
+
+.event-item:hover {
+  box-shadow: 0 0 4px 0 rgba(0,0,0,0.4);
+  cursor: pointer;
+}
+
 .panel {
   border: 0;
 }
